--- a/pulsing heart animation.html
+++ b/pulsing heart animation.html
@@ -7,7 +7,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: yellow;
     animation-name: backdiv;
     animation-duration: 1s;
 animation-iteration-count:infinite;
