--- a/pulsing heart animation.html
+++ b/pulsing heart animation.html
@@ -1,13 +1,13 @@
 <style>
-  .back {
-    position: fixed;
+  .change{
+    position: fixed
     padding: 0;
     margin: 0;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: yellow;
+   background-color: yellow;
     animation-name: backdiv;
     animation-duration: 1s;
 animation-iteration-count:infinite;
@@ -23,7 +23,7 @@ animation-iteration-count:infinite;
     background-color: pink;
     height: 50px;
     width: 50px;
-    transform: rotate(-90deg);
+    transform: rotate(-45deg);
     animation-name: beat;
     animation-duration: 1s;
 animation-iteration-count:infinite;
@@ -55,15 +55,16 @@ animation-iteration-count:infinite;
     }
   }
 
-  @keyframes beat {
+  @keyframes beat{
     0% {
-      transform: scale(1) rotate(-90deg);
+      transform: scale(1) rotate(-360deg);
     }
     50% {
-      transform: scale(0.6) rotate(-90deg);
+      transform: scale(0.6) rotate(-45deg);
     }
   }
 
 </style>
-<div class="back"></div>
+<div class="change"></div>
 <div class="heart"></div>
+
